[project]
name = "pku2026-recognizer"
version = "0.1.0"
description = "Standalone captcha recognition API service for PKU Auto Elective 2026"
requires-python = ">=3.10,<3.12"
dependencies = [
  "Flask==2.0.3",
  "Werkzeug==2.2.2",
  "opencv-python==4.7.0.72",
  "Pillow==9.5.0",
  "numpy==1.23.5",
  "PyYAML>=3.13",
  "tqdm",
  "colorama",
  "tensorflow==2.12.0",
]
